--- a/indexes/nsc1028/60.md
+++ b/indexes/nsc1028/60.md
@@ -1,5 +1,8 @@
 ### 纪元评论：以史为鉴
 ---
+#### [张菁：西安政变“功臣”刘鼎被中共整的很惨](../../pages/nsc1028/n13679371.md) 
+#### [观雨堂主：从“原子弹与茶叶蛋”谈起](../../pages/nsc1028/n13677405.md) 
+#### [李宇明：中南海“为人民服务”标语背后的故事](../../pages/nsc1028/n13677266.md) 
 #### [中共援助阿尔巴尼亚最多 却成了阿的“敌人”](../../pages/nsc1028/n13675049.md) 
 #### [王友群：中朝之间有鲜血凝成的友谊吗？](../../pages/nsc1028/n13660401.md) 
 #### [中共罪行录之七十四：“彭德怀反党集团”](../../pages/nsc1028/n13655741.md) 
@@ -27,9 +30,6 @@
 #### [中共罪行录之七十一：胡适幼子之死](../../pages/nsc1028/n13575380.md) 
 #### [李清：武训家乡骇人听闻的《百日无孩》运动](../../pages/nsc1028/n13570011.md) 
 #### [夏祷：红色木马入城记](../../pages/nsc1028/n13566468.md) 
-#### [李天韵：“武统台湾” 中共必亡](../../pages/nsc1028/n13531538.md) 
-#### [王友琴：刘华失去右胳膊—北京大学的父子两代悲情](../../pages/nsc1028/n13559130.md) 
-#### [王友群：黄炎培投奔中共 家人惨遭中共迫害](../../pages/nsc1028/n13556189.md) 
 
 ---
 #### 第 [ [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) ] 页
