--- a/indexes/nsc993/77.md
+++ b/indexes/nsc993/77.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】“中国会变成国际社会负责任的一员吗”？](../../pages/nsc993/n13680707.md) 
+#### [网友：这就是之前被捧上天的精准防控的上海么？](../../pages/nsc993/n13680287.md) 
 #### [【网海拾贝】这是2022年的上海？](../../pages/nsc993/n13678253.md) 
 #### [丰县籍导演不惧风险再度为铁链女事件发声](../../pages/nsc993/n13678215.md) 
 #### [直言：《贱党伪业》续](../../pages/nsc993/n13678056.md) 
@@ -28,8 +30,6 @@
 #### [东方不乐：铁链歌二首](../../pages/nsc993/n13659123.md) 
 #### [川人：汉奸嘴脸，中共替俄国洗地原形毕露？](../../pages/nsc993/n13657995.md) 
 #### [【网海拾贝】中共从不缺席世界性邪恶行径](../../pages/nsc993/n13657799.md) 
-#### [防疫一刀切，令北京“双城记”现悲情一页](../../pages/nsc993/n13657746.md) 
-#### [【网海拾贝】俄乌战争，中共犯“颠覆性战略错误”](../../pages/nsc993/n13655760.md) 
 
 ---
 #### 第 [ [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) ] 页
