--- a/indexes/nsc993/77.md
+++ b/indexes/nsc993/77.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】东航空难调查：中国民间提出三大疑问](../../pages/nsc993/n13683137.md) 
+#### [那些在“精准防控”下求助的上海普通人](../../pages/nsc993/n13683088.md) 
 #### [【网海拾贝】“中国会变成国际社会负责任的一员吗”？](../../pages/nsc993/n13680707.md) 
 #### [网友：这就是之前被捧上天的精准防控的上海么？](../../pages/nsc993/n13680287.md) 
 #### [【网海拾贝】这是2022年的上海？](../../pages/nsc993/n13678253.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】赵立坚“抖机灵”遭乌克兰副总理怒怼](../../pages/nsc993/n13659660.md) 
 #### [大陆作家：“疫情封控一刀切，于是我被……了”](../../pages/nsc993/n13659323.md) 
 #### [东方不乐：铁链歌二首](../../pages/nsc993/n13659123.md) 
-#### [川人：汉奸嘴脸，中共替俄国洗地原形毕露？](../../pages/nsc993/n13657995.md) 
-#### [【网海拾贝】中共从不缺席世界性邪恶行径](../../pages/nsc993/n13657799.md) 
 
 ---
 #### 第 [ [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) ] 页
