--- a/indexes/nsc993/77.md
+++ b/indexes/nsc993/77.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [程晓农：俄国入侵乌克兰：民主化失败的现实教训](../../pages/nsc993/n13686006.md) 
+#### [【网海拾贝】中共极端“清零”人民忍无可忍](../../pages/nsc993/n13685914.md) 
+#### [上海77岁患者因封控不当惨死，家属追问真相](../../pages/nsc993/n13685891.md) 
 #### [【网海拾贝】东航空难调查：中国民间提出三大疑问](../../pages/nsc993/n13683137.md) 
 #### [那些在“精准防控”下求助的上海普通人](../../pages/nsc993/n13683088.md) 
 #### [【网海拾贝】“中国会变成国际社会负责任的一员吗”？](../../pages/nsc993/n13680707.md) 
@@ -27,9 +30,6 @@
 #### [余茂春：台湾应该吸取乌克兰的深刻教训](../../pages/nsc993/n13661829.md) 
 #### [清泉：泉州新冠再起，疫情源头竟是官员酒店](../../pages/nsc993/n13660898.md) 
 #### [如初：羡慕与嫉恨，中共瞄向谁？](../../pages/nsc993/n13660773.md) 
-#### [【网海拾贝】赵立坚“抖机灵”遭乌克兰副总理怒怼](../../pages/nsc993/n13659660.md) 
-#### [大陆作家：“疫情封控一刀切，于是我被……了”](../../pages/nsc993/n13659323.md) 
-#### [东方不乐：铁链歌二首](../../pages/nsc993/n13659123.md) 
 
 ---
 #### 第 [ [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) ] 页
