--- a/indexes/nsc1028/60.md
+++ b/indexes/nsc1028/60.md
@@ -1,5 +1,6 @@
 ### 纪元评论：以史为鉴
 ---
+#### [中共罪行录之七十五：叛徒、内奸、工贼刘少奇](../../pages/nsc1028/n13688599.md) 
 #### [张菁：西安政变“功臣”刘鼎被中共整的很惨](../../pages/nsc1028/n13679371.md) 
 #### [观雨堂主：从“原子弹与茶叶蛋”谈起](../../pages/nsc1028/n13677405.md) 
 #### [李宇明：中南海“为人民服务”标语背后的故事](../../pages/nsc1028/n13677266.md) 
@@ -29,7 +30,6 @@
 #### [王友群：中共间谍金无怠潜伏美国三十多年](../../pages/nsc1028/n13574800.md) 
 #### [中共罪行录之七十一：胡适幼子之死](../../pages/nsc1028/n13575380.md) 
 #### [李清：武训家乡骇人听闻的《百日无孩》运动](../../pages/nsc1028/n13570011.md) 
-#### [夏祷：红色木马入城记](../../pages/nsc1028/n13566468.md) 
 
 ---
 #### 第 [ [60](./60.md) / [59](./59.md) / [58](./58.md) / [57](./57.md) / [56](./56.md) / [55](./55.md) / [54](./54.md) / [53](./53.md) ] 页
