--- a/indexes/nsc993/77.md
+++ b/indexes/nsc993/77.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [同根：正视疫苗的无效，回归昔日的忠告（下）](../../pages/nsc993/n13688756.md) 
+#### [【网海拾贝】这就是上海！活了33年的上海！](../../pages/nsc993/n13688654.md) 
+#### [颜纯钩：真相无价：正确的历史观是价值观的基础](../../pages/nsc993/n13688555.md) 
 #### [程晓农：俄国入侵乌克兰：民主化失败的现实教训](../../pages/nsc993/n13686006.md) 
 #### [【网海拾贝】中共极端“清零”人民忍无可忍](../../pages/nsc993/n13685914.md) 
 #### [上海77岁患者因封控不当惨死，家属追问真相](../../pages/nsc993/n13685891.md) 
@@ -27,9 +30,6 @@
 #### [清零式严控与“一刀切”下的燕郊](../../pages/nsc993/n13664450.md) 
 #### [【网海拾贝】中共抗疫：病毒都没有你们可怕](../../pages/nsc993/n13662063.md) 
 #### [网友改写名著名句，拿大陆疫情防控开涮](../../pages/nsc993/n13661999.md) 
-#### [余茂春：台湾应该吸取乌克兰的深刻教训](../../pages/nsc993/n13661829.md) 
-#### [清泉：泉州新冠再起，疫情源头竟是官员酒店](../../pages/nsc993/n13660898.md) 
-#### [如初：羡慕与嫉恨，中共瞄向谁？](../../pages/nsc993/n13660773.md) 
 
 ---
 #### 第 [ [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) ] 页
