--- a/indexes/nsc993/77.md
+++ b/indexes/nsc993/77.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】这样的上海百年不遇](../../pages/nsc993/n13692603.md) 
+#### [唐付民：再次质疑疯狂的中共抗疫模式](../../pages/nsc993/n13691971.md) 
 #### [同根：正视疫苗的无效，回归昔日的忠告（下）](../../pages/nsc993/n13688756.md) 
 #### [【网海拾贝】这就是上海！活了33年的上海！](../../pages/nsc993/n13688654.md) 
 #### [颜纯钩：真相无价：正确的历史观是价值观的基础](../../pages/nsc993/n13688555.md) 
@@ -28,8 +30,6 @@
 #### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13666926.md) 
 #### [【网海拾贝】不军援俄罗斯，中共的话能信？](../../pages/nsc993/n13664594.md) 
 #### [清零式严控与“一刀切”下的燕郊](../../pages/nsc993/n13664450.md) 
-#### [【网海拾贝】中共抗疫：病毒都没有你们可怕](../../pages/nsc993/n13662063.md) 
-#### [网友改写名著名句，拿大陆疫情防控开涮](../../pages/nsc993/n13661999.md) 
 
 ---
 #### 第 [ [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) ] 页
