have a nice day!

--- a/indexes/nsc1025/179.md
+++ b/indexes/nsc1025/179.md
@@ -1,5 +1,9 @@
 ### 纪元评论：时政评论
 ---
+#### [楚一丁：从乌克兰危机看北京全球战略](../../pages/nsc1025/n13695479.md) 
+#### [【名家专栏】中共依赖非洲 防食物危机](../../pages/nsc1025/n13694990.md) 
+#### [观雨堂主：2022年的春天，在上海](../../pages/nsc1025/n13694587.md) 
+#### [李正宽：上海录音掀黑幕 官宣与现实两重天](../../pages/nsc1025/n13694500.md) 
 #### [石铭：美国再次为法轮功发声](../../pages/nsc1025/n13694467.md) 
 #### [乾元：一根铁链能锁住大上海吗——从在加国染疫谈起](../../pages/nsc1025/n13694190.md) 
 #### [颜丹：上海是科学防疫还是政治防疫](../../pages/nsc1025/n13693076.md) 
@@ -26,10 +30,6 @@
 #### [郝平：上海防疫乱象频曝 习江斗过大招？](../../pages/nsc1025/n13688990.md) 
 #### [【名家专栏】中共腐败使中国市场不可投资](../../pages/nsc1025/n13688874.md) 
 #### [觅真：从季云芝老人的悲惨遭遇看中共的邪恶至极](../../pages/nsc1025/n13688536.md) 
-#### [钟原：中俄在阿富汗问题上继续拧劲](../../pages/nsc1025/n13687653.md) 
-#### [【名家专栏】美应打击中共对法轮功的仇恨犯罪](../../pages/nsc1025/n13683636.md) 
-#### [王赫：中共与所罗门拟签安全协议 后果严重](../../pages/nsc1025/n13687366.md) 
-#### [谢田：普京砍向美国和美元的三板斧](../../pages/nsc1025/n13686900.md) 
 
 ---
-#### 第 [ [178](./178.md) / [177](./177.md) / [176](./176.md) / [175](./175.md) / [174](./174.md) / [173](./173.md) / [172](./172.md) / [171](./171.md) ] 页
+#### 第 [ [179](./179.md) / [178](./178.md) / [177](./177.md) / [176](./176.md) / [175](./175.md) / [174](./174.md) / [173](./173.md) / [172](./172.md) ] 页
