--- a/indexes/nsc993/77.md
+++ b/indexes/nsc993/77.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】所谓“全国疫情数据”都是中共编造的](../../pages/nsc993/n13694674.md) 
+#### [律师：上海单独隔离婴幼儿涉嫌滥用职权罪](../../pages/nsc993/n13694627.md) 
+#### [祝君安：浪淘沙·清零模式](../../pages/nsc993/n13694452.md) 
 #### [【网海拾贝】这样的上海百年不遇](../../pages/nsc993/n13692603.md) 
 #### [唐付民：再次质疑疯狂的中共抗疫模式](../../pages/nsc993/n13691971.md) 
 #### [同根：正视疫苗的无效，回归昔日的忠告（下）](../../pages/nsc993/n13688756.md) 
@@ -27,9 +30,6 @@
 #### [南京双城族：“因为疫情我无家可归了！”](../../pages/nsc993/n13669511.md) 
 #### [东航空难事件董事长答记者问 网友不满](../../pages/nsc993/n13669436.md) 
 #### [【网海拾贝】中国传染病专家质疑中共隔离政策](../../pages/nsc993/n13667190.md) 
-#### [东方觉：荒唐国度荒唐事 雷人社会雷人语](../../pages/nsc993/n13666926.md) 
-#### [【网海拾贝】不军援俄罗斯，中共的话能信？](../../pages/nsc993/n13664594.md) 
-#### [清零式严控与“一刀切”下的燕郊](../../pages/nsc993/n13664450.md) 
 
 ---
 #### 第 [ [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) ] 页
