have a nice day!

--- a/indexes/nsc1025/179.md
+++ b/indexes/nsc1025/179.md
@@ -1,5 +1,12 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：社媒热传《国际歌》第一节 让北京心难安](../../pages/nsc1025/n13700202.md) 
+#### [岳山：习近平欲联手胡锦涛保连任？](../../pages/nsc1025/n13699342.md) 
+#### [观雨堂主：中共的“承诺”三部曲](../../pages/nsc1025/n13699263.md) 
+#### [颜宝刚：由睡地板的银行家到寿终正寝的全球化](../../pages/nsc1025/n13699173.md) 
+#### [李正宽：上海防疫 当次生灾害成为主要灾害](../../pages/nsc1025/n13698789.md) 
+#### [王赫：欧盟正在破除中共的战略欺骗](../../pages/nsc1025/n13697877.md) 
+#### [【名家专栏】美联储解决通胀措施恐致经济衰退](../../pages/nsc1025/n13697010.md) 
 #### [章裕：上海进口疫苗 爆中共封城原因](../../pages/nsc1025/n13696731.md) 
 #### [新冠肺炎从“措施”到“错施” 还要走多远？（上）](../../pages/nsc1025/n13696709.md) 
 #### [【网海拾贝】强行隔离婴儿，中共震惊世界的恶劣记录](../../pages/nsc1025/n13696703.md) 
@@ -23,13 +30,6 @@
 #### [石铭：清明时节话老年法轮功学员的悲惨遭遇](../../pages/nsc1025/n13691935.md) 
 #### [王赫：中共如何寻求建立海外军事基地？](../../pages/nsc1025/n13689821.md) 
 #### [李明：疫情真相——写给中国大陆的父老乡亲](../../pages/nsc1025/n13691899.md) 
-#### [颜纯钩﻿：英国法官耻与为伍，一国两制体无完肤](../../pages/nsc1025/n13691602.md) 
-#### [俄乌实战凸显世界军力前三名的差距：情报篇](../../pages/nsc1025/n13691471.md) 
-#### [周晓辉：各地医护特警物资驰援上海 说明什么？](../../pages/nsc1025/n13691139.md) 
-#### [【名家专栏】中共摧毁了中美友好关系](../../pages/nsc1025/n13690953.md) 
-#### [袁斌：中共为何坚持清零不放松？](../../pages/nsc1025/n13690612.md) 
-#### [【网海拾贝】因为疫情管控上海到底死了多少人了？](../../pages/nsc1025/n13690686.md) 
-#### [王赫：中欧峰会凸显中共外交僵死](../../pages/nsc1025/n13690643.md) 
 
 ---
 #### 第 [ [179](./179.md) / [178](./178.md) / [177](./177.md) / [176](./176.md) / [175](./175.md) / [174](./174.md) / [173](./173.md) / [172](./172.md) ] 页
