--- a/indexes/nsc993/77.md
+++ b/indexes/nsc993/77.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】“人们成了灾难性政治实验的一部分”](../../pages/nsc993/n13698988.md) 
+#### [我们从小到大学到的历史哪些是假的（17）](../../pages/nsc993/n13698883.md) 
 #### [【网海拾贝】所谓“全国疫情数据”都是中共编造的](../../pages/nsc993/n13694674.md) 
 #### [律师：上海单独隔离婴幼儿涉嫌滥用职权罪](../../pages/nsc993/n13694627.md) 
 #### [祝君安：浪淘沙·清零模式](../../pages/nsc993/n13694452.md) 
@@ -28,8 +30,6 @@
 #### [两位上海市民感染新冠后的亲历记](../../pages/nsc993/n13672217.md) 
 #### [【网海拾贝】中共又干预美国内政了](../../pages/nsc993/n13669564.md) 
 #### [南京双城族：“因为疫情我无家可归了！”](../../pages/nsc993/n13669511.md) 
-#### [东航空难事件董事长答记者问 网友不满](../../pages/nsc993/n13669436.md) 
-#### [【网海拾贝】中国传染病专家质疑中共隔离政策](../../pages/nsc993/n13667190.md) 
 
 ---
 #### 第 [ [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) ] 页
