have a nice day!

--- a/indexes/nsc1025/180.md
+++ b/indexes/nsc1025/180.md
@@ -1,5 +1,7 @@
 ### 纪元评论：时政评论
 ---
+#### [王友群：傅政华成习近平“严重安全隐患”？](../../pages/nsc1025/n13702581.md) 
+#### [何良懋：中共在抗疫问题上搞假大空](../../pages/nsc1025/n13703520.md) 
 #### [【名家专栏】从加州州立大学放弃SAT考试说起](../../pages/nsc1025/n13703336.md) 
 #### [谢田：普京撼动美元 中共为何不能？](../../pages/nsc1025/n13703095.md) 
 #### [郝平：党媒警告上海勿“躺平” 习清剿江余党信号？](../../pages/nsc1025/n13703031.md) 
@@ -28,8 +30,6 @@
 #### [何清涟：制裁与反制裁的博弈——欧盟的分裂](../../pages/nsc1025/n13695772.md) 
 #### [楚一丁：从乌克兰危机看北京全球战略](../../pages/nsc1025/n13695479.md) 
 #### [【名家专栏】中共依赖非洲 防食物危机](../../pages/nsc1025/n13694990.md) 
-#### [观雨堂主：2022年的春天，在上海](../../pages/nsc1025/n13694587.md) 
-#### [李正宽：上海录音掀黑幕 官宣与现实两重天](../../pages/nsc1025/n13694500.md) 
 
 ---
-#### 第 [ [179](./179.md) / [178](./178.md) / [177](./177.md) / [176](./176.md) / [175](./175.md) / [174](./174.md) / [173](./173.md) / [172](./172.md) ] 页
+#### 第 [ [180](./180.md) / [179](./179.md) / [178](./178.md) / [177](./177.md) / [176](./176.md) / [175](./175.md) / [174](./174.md) / [173](./173.md) ] 页
