--- a/indexes/nsc993/77.md
+++ b/indexes/nsc993/77.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】你能想像得到这里是上海吗？](../../pages/nsc993/n13704442.md) 
+#### [理悟：命悬一线等什么](../../pages/nsc993/n13703131.md) 
 #### [【网海拾贝】如能抗议何须抗疫，若不废言怎有肺炎](../../pages/nsc993/n13701767.md) 
 #### [网友调侃中共防疫政策，令人捧腹](../../pages/nsc993/n13701561.md) 
 #### [【网海拾贝】“人们成了灾难性政治实验的一部分”](../../pages/nsc993/n13698988.md) 
@@ -28,8 +30,6 @@
 #### [乾元：东航飞机失事一个可能原因的猜想](../../pages/nsc993/n13675834.md) 
 #### [【网海拾贝】可怕的不是病毒，是一刀切的清零](../../pages/nsc993/n13674403.md) 
 #### [关于防疫，网友请中共回答5大类20个问题](../../pages/nsc993/n13674318.md) 
-#### [【网海拾贝】最后病毒未必防住，人民先崩溃了](../../pages/nsc993/n13672307.md) 
-#### [两位上海市民感染新冠后的亲历记](../../pages/nsc993/n13672217.md) 
 
 ---
 #### 第 [ [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) ] 页
