--- a/indexes/nsc993/78.md
+++ b/indexes/nsc993/78.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [一个上海阳性市民72小时的荒谬人生](../../pages/nsc993/n13706620.md) 
+#### [【网海拾贝】一场针对十几亿人的服从性训练](../../pages/nsc993/n13706555.md) 
 #### [一个上海市民的哭诉：“我的爸爸没了”](../../pages/nsc993/n13706497.md) 
 #### [谢燕益：受害人郭洪伟因公权渎职侵权致死](../../pages/nsc993/n13706184.md) 
 #### [【网海拾贝】你能想像得到这里是上海吗？](../../pages/nsc993/n13704442.md) 
@@ -28,8 +30,6 @@
 #### [直言：《贱党伪业》续](../../pages/nsc993/n13678056.md) 
 #### [李明：史前大洪水与本次全球疫情](../../pages/nsc993/n13677332.md) 
 #### [博主：每一次清零，都是人民慢慢流血的过程](../../pages/nsc993/n13676078.md) 
-#### [【网海拾贝】东航失事飞机的黑匣子到底有没有找到？](../../pages/nsc993/n13676034.md) 
-#### [乾元：东航飞机失事一个可能原因的猜想](../../pages/nsc993/n13675834.md) 
 
 ---
-#### 第 [ [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) / [70](./70.md) ] 页
+#### 第 [ [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) ] 页
