have a nice day!

--- a/indexes/nsc993/78.md
+++ b/indexes/nsc993/78.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】所谓不惜一切代价，就是不惜让你成为代价](../../pages/nsc993/n13708201.md) 
+#### [真真：什么是“中国特色”](../../pages/nsc993/n13708141.md) 
 #### [一个上海阳性市民72小时的荒谬人生](../../pages/nsc993/n13706620.md) 
 #### [【网海拾贝】一场针对十几亿人的服从性训练](../../pages/nsc993/n13706555.md) 
 #### [一个上海市民的哭诉：“我的爸爸没了”](../../pages/nsc993/n13706497.md) 
@@ -28,8 +30,6 @@
 #### [【网海拾贝】这是2022年的上海？](../../pages/nsc993/n13678253.md) 
 #### [丰县籍导演不惧风险再度为铁链女事件发声](../../pages/nsc993/n13678215.md) 
 #### [直言：《贱党伪业》续](../../pages/nsc993/n13678056.md) 
-#### [李明：史前大洪水与本次全球疫情](../../pages/nsc993/n13677332.md) 
-#### [博主：每一次清零，都是人民慢慢流血的过程](../../pages/nsc993/n13676078.md) 
 
 ---
 #### 第 [ [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) ] 页
