have a nice day!

--- a/indexes/nsc1025/180.md
+++ b/indexes/nsc1025/180.md
@@ -1,5 +1,19 @@
 ### 纪元评论：时政评论
 ---
+#### [周晓辉：民众抢菜 上海长春政府卖捐赠菜](../../pages/nsc1025/n13709314.md) 
+#### [程晓农：波兰为什么在乌克兰战争中鹤立鸡群?](../../pages/nsc1025/n13709311.md) 
+#### [岳山：习近平二十大会换掉赵乐际？](../../pages/nsc1025/n13709216.md) 
+#### [颜丹：上海防疫开启“计划经济”模式](../../pages/nsc1025/n13709214.md) 
+#### [【名家专栏】暴涨的疫情病例戳穿中共宣传](../../pages/nsc1025/n13709140.md) 
+#### [张菁：“动态清零”付出的代价是什么](../../pages/nsc1025/n13709079.md) 
+#### [陆客：聊聊中共的政治生态——从铁链女事件说起（下）](../../pages/nsc1025/n13708168.md) 
+#### [川人：邪党式清零，中国人正在挣扎中求生](../../pages/nsc1025/n13709064.md) 
+#### [觅真：新年首季 多名法轮功学员被迫害致死或判刑](../../pages/nsc1025/n13709060.md) 
+#### [陈思敏：上海疫情下的抢菜焦虑堪比“大饥荒”](../../pages/nsc1025/n13708978.md) 
+#### [【名家专栏】俄乌战和清零政策拖累中国经济](../../pages/nsc1025/n13708632.md) 
+#### [何清涟：世界正站在布雷顿森林体系3.0的入口](../../pages/nsc1025/n13708588.md) 
+#### [王友群：俄乌战争爆发后多少俄高官等人被制裁](../../pages/nsc1025/n13708565.md) 
+#### [郝平：中共起于上海 崩亡或始于上海](../../pages/nsc1025/n13708502.md) 
 #### [俄乌实战凸显世界军力前三名差距：远程打击](../../pages/nsc1025/n13708429.md) 
 #### [陆客：聊聊中共的政治生态——从铁链女事件说起（上）](../../pages/nsc1025/n13708160.md) 
 #### [【名家专栏】人人看手机时代怎样看护儿童？](../../pages/nsc1025/n13707108.md) 
@@ -16,20 +30,6 @@
 #### [谢田：普京撼动美元 中共为何不能？](../../pages/nsc1025/n13703095.md) 
 #### [郝平：党媒警告上海勿“躺平” 习清剿江余党信号？](../../pages/nsc1025/n13703031.md) 
 #### [【纪元专栏】解封和废除口罩令后 病毒清零派不撒手](../../pages/nsc1025/n13702905.md) 
-#### [【有冇搞错】俄乌战争必长期化](../../pages/nsc1025/n13700356.md) 
-#### [周晓辉：封控期商场人山人海 李强向沪官员喊话](../../pages/nsc1025/n13701364.md) 
-#### [【名家专栏】出口军用无人机 中共破坏世界稳定](../../pages/nsc1025/n13699664.md) 
-#### [王赫：韩国走向令中共心悬](../../pages/nsc1025/n13701470.md) 
-#### [铃兰：比疫情更悲剧](../../pages/nsc1025/n13701382.md) 
-#### [沈舟：16架F-35B战机登上美军轻航母](../../pages/nsc1025/n13701002.md) 
-#### [钟原：“清零”防疫损害经济 李克强现无奈](../../pages/nsc1025/n13700280.md) 
-#### [周晓辉：社媒热传《国际歌》第一节 让北京心难安](../../pages/nsc1025/n13700202.md) 
-#### [岳山：习近平欲联手胡锦涛保连任？](../../pages/nsc1025/n13699342.md) 
-#### [观雨堂主：中共的“承诺”三部曲](../../pages/nsc1025/n13699263.md) 
-#### [颜宝刚：由睡地板的银行家到寿终正寝的全球化](../../pages/nsc1025/n13699173.md) 
-#### [李正宽：上海防疫 当次生灾害成为主要灾害](../../pages/nsc1025/n13698789.md) 
-#### [王赫：欧盟正在破除中共的战略欺骗](../../pages/nsc1025/n13697877.md) 
-#### [【名家专栏】美联储解决通胀措施恐致经济衰退](../../pages/nsc1025/n13697010.md) 
 
 ---
 #### 第 [ [180](./180.md) / [179](./179.md) / [178](./178.md) / [177](./177.md) / [176](./176.md) / [175](./175.md) / [174](./174.md) / [173](./173.md) ] 页
