--- a/indexes/nsc993/78.md
+++ b/indexes/nsc993/78.md
@@ -1,5 +1,6 @@
 ### 纪元评论：自由广场
 ---
+#### [李春草：醉花阴·政治正确](../../pages/nsc993/n13709048.md) 
 #### [【网海拾贝】所谓不惜一切代价，就是不惜让你成为代价](../../pages/nsc993/n13708201.md) 
 #### [真真：什么是“中国特色”](../../pages/nsc993/n13708141.md) 
 #### [一个上海阳性市民72小时的荒谬人生](../../pages/nsc993/n13706620.md) 
@@ -29,7 +30,6 @@
 #### [网友：这就是之前被捧上天的精准防控的上海么？](../../pages/nsc993/n13680287.md) 
 #### [【网海拾贝】这是2022年的上海？](../../pages/nsc993/n13678253.md) 
 #### [丰县籍导演不惧风险再度为铁链女事件发声](../../pages/nsc993/n13678215.md) 
-#### [直言：《贱党伪业》续](../../pages/nsc993/n13678056.md) 
 
 ---
 #### 第 [ [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) ] 页
