--- a/indexes/nsc993/78.md
+++ b/indexes/nsc993/78.md
@@ -1,5 +1,7 @@
 ### 纪元评论：自由广场
 ---
+#### [【网海拾贝】可怕的不是病毒，而是说封就封](../../pages/nsc993/n13709731.md) 
+#### [太魔幻，上海小伙饿疯了，竟主动要吃“牢饭”](../../pages/nsc993/n13709700.md) 
 #### [李春草：醉花阴·政治正确](../../pages/nsc993/n13709048.md) 
 #### [【网海拾贝】所谓不惜一切代价，就是不惜让你成为代价](../../pages/nsc993/n13708201.md) 
 #### [真真：什么是“中国特色”](../../pages/nsc993/n13708141.md) 
@@ -28,8 +30,6 @@
 #### [那些在“精准防控”下求助的上海普通人](../../pages/nsc993/n13683088.md) 
 #### [【网海拾贝】“中国会变成国际社会负责任的一员吗”？](../../pages/nsc993/n13680707.md) 
 #### [网友：这就是之前被捧上天的精准防控的上海么？](../../pages/nsc993/n13680287.md) 
-#### [【网海拾贝】这是2022年的上海？](../../pages/nsc993/n13678253.md) 
-#### [丰县籍导演不惧风险再度为铁链女事件发声](../../pages/nsc993/n13678215.md) 
 
 ---
 #### 第 [ [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) ] 页
