--- a/indexes/nsc993/78.md
+++ b/indexes/nsc993/78.md
@@ -1,5 +1,8 @@
 ### 纪元评论：自由广场
 ---
+#### [媒体人：疫情下的上海，根本不是新闻里看到的那样](../../pages/nsc993/n13711529.md) 
+#### [上海东方卫视防疫晚会被网友骂停](../../pages/nsc993/n13711504.md) 
+#### [上海网友：“刚刚，我妈电话我求救”](../../pages/nsc993/n13710629.md) 
 #### [【网海拾贝】你们造了如此大的谣，为何没人担责？](../../pages/nsc993/n13710606.md) 
 #### [【网海拾贝】可怕的不是病毒，而是说封就封](../../pages/nsc993/n13709731.md) 
 #### [太魔幻，上海小伙饿疯了，竟主动要吃“牢饭”](../../pages/nsc993/n13709700.md) 
@@ -27,9 +30,6 @@
 #### [程晓农：俄国入侵乌克兰：民主化失败的现实教训](../../pages/nsc993/n13686006.md) 
 #### [【网海拾贝】中共极端“清零”人民忍无可忍](../../pages/nsc993/n13685914.md) 
 #### [上海77岁患者因封控不当惨死，家属追问真相](../../pages/nsc993/n13685891.md) 
-#### [【网海拾贝】东航空难调查：中国民间提出三大疑问](../../pages/nsc993/n13683137.md) 
-#### [那些在“精准防控”下求助的上海普通人](../../pages/nsc993/n13683088.md) 
-#### [【网海拾贝】“中国会变成国际社会负责任的一员吗”？](../../pages/nsc993/n13680707.md) 
 
 ---
 #### 第 [ [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) ] 页
