--- a/indexes/nsc993/78.md
+++ b/indexes/nsc993/78.md
@@ -1,5 +1,10 @@
 ### 纪元评论：自由广场
 ---
+#### [美国是全球最大人权赤字国？央视被网民骂翻](../../pages/nsc993/n13712475.md) 
+#### [竞选者：什么是国家统一市场？](../../pages/nsc993/n13712470.md) 
+#### [上海市民：我受不了了人很难受，就看着我死吗？](../../pages/nsc993/n13712354.md) 
+#### [【网海拾贝】中国防疫，只有胜利没有结束](../../pages/nsc993/n13712343.md) 
+#### [【网海拾贝】未来十年的灰暗底色已经一览无余](../../pages/nsc993/n13711555.md) 
 #### [媒体人：疫情下的上海，根本不是新闻里看到的那样](../../pages/nsc993/n13711529.md) 
 #### [上海东方卫视防疫晚会被网友骂停](../../pages/nsc993/n13711504.md) 
 #### [上海网友：“刚刚，我妈电话我求救”](../../pages/nsc993/n13710629.md) 
@@ -25,11 +30,6 @@
 #### [【网海拾贝】这样的上海百年不遇](../../pages/nsc993/n13692603.md) 
 #### [唐付民：再次质疑疯狂的中共抗疫模式](../../pages/nsc993/n13691971.md) 
 #### [同根：正视疫苗的无效，回归昔日的忠告（下）](../../pages/nsc993/n13688756.md) 
-#### [【网海拾贝】这就是上海！活了33年的上海！](../../pages/nsc993/n13688654.md) 
-#### [颜纯钩：真相无价：正确的历史观是价值观的基础](../../pages/nsc993/n13688555.md) 
-#### [程晓农：俄国入侵乌克兰：民主化失败的现实教训](../../pages/nsc993/n13686006.md) 
-#### [【网海拾贝】中共极端“清零”人民忍无可忍](../../pages/nsc993/n13685914.md) 
-#### [上海77岁患者因封控不当惨死，家属追问真相](../../pages/nsc993/n13685891.md) 
 
 ---
 #### 第 [ [78](./78.md) / [77](./77.md) / [76](./76.md) / [75](./75.md) / [74](./74.md) / [73](./73.md) / [72](./72.md) / [71](./71.md) ] 页
